--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: #20232ae0;
+  margin-bottom: 25px;
 }
 .nav-bar img {
   margin-right: 50px;
@@ -18,6 +19,7 @@
   margin: 20px;
   transition: all linear 0.3s;
   padding: 30px;
+  border-bottom: 3px solid transparent;
 }
 .nav-bar nav a:hover {
   color: #67cde9;
