--- a/src/component/Leader/Leader.css
+++ b/src/component/Leader/Leader.css
@@ -4,7 +4,7 @@
   border-radius: 50%;
 }
 .leader-container {
-  margin-top: 30px;
+  margin-top: 60px;
   color: #20232ae0;
   text-align: center;
   background-image: linear-gradient(#67cde9, rgba(0, 81, 255, 0.253));
@@ -17,4 +17,23 @@
   padding: 5px 10px;
   border: 1px solid #20232ae0;
   border-radius: 5px;
+  transition: all linear 0.3s;
+  margin-bottom: 20px;
+}
+.button-icon {
+  color: #0b404e;
+  transition: all linear 0.3s;
+}
+.button:hover {
+  background-color: #0b404e;
+  color: #fff;
+}
+.button:hover .button-icon {
+  color: #fff;
+}
+.icon {
+  margin-top: 10px;
+  color: #0b404e;
+  font-size: 35px;
+  padding: 5px;
 }
